# tlpi

./: CMakeLists.txt  README.md
acl/: acl_perms  acl_perms.c  acl_view  acl_view.c
alt_io/: epoll_svr.c  poll_pipes.c  t_select.c
cap/: check_password_caps.c
daemons/: my_logger  my_logger.c
dirs_links/: dir_stats  dir_stats.c  failed_chmod  failed_chmod.c  list_files  list_files.c  long_runner  long_runner.c  my_getcwd  my_getcwd.c  my_realpath  my_realpath.c  nftw_dir_tree  nftw_dir_tree.c  t_unlink  t_unlink.c  time_chdir  time_chdir.c
filebuff/: direct_read  direct_read.c  my_tail  my_tail.c
fileio/: CMakeLists.txt  atomic_append  atomic_append.c  begin_append  begin_append.c  copy  copy.c  copy_with_holes  copy_with_holes.c  dup_check  dup_check.c  dup_implementations.c  f1  f2  large_file.c  my_scatter_io  my_scatter_io.c  my_tee  my_tee.c  out_file.txt  seek_io  seek_io.c  t_readv.c  unlink_file.c
files/: CMakeLists.txt  chmod_arX  chmod_arX.c  my_chattr  my_chattr.c  my_eaccess.c
filesys/: mkfile_benchmark  mkfile_benchmark.c
inotify/: demo_inotify  demo_inotify.c  log_dir  log_dir.c  log_dir.core
ipc/: pipe_benchmark  pipe_benchmark.c
lib/: CMakeLists.txt  become_daemon.c  binary_sems.c  cap_manip.c  curr_time.c  error_functions.c  get_num.c  print_rlimit.c  print_wait_status.c  signal_functions.c  ugid_functions.c
loginacct/: dump_utmpx  dump_utmpx.c  my_getlogin  my_getlogin.c  my_log_functions.c  my_who  my_who.c  utmpx_login  utmpx_login.c  view_lastlog  view_lastlog.c
memalloc/: free_and_sbrk  free_and_sbrk.c  notes.md  out.txt
mmap/: anon_mmap.c  mmap_boundary_cases.c  mmap_cp.c  mmcat.c  nonlinear_mapping.c  t_mmap.c
pgsjc/: disc_SIGHUP  disc_SIGHUP.c  job_mon  job_mon.c  print_pgrp  print_pgrp.c  setpgid_child  setpgid_child.c  setsid_fail  setsid_fail.c  t_setsid  t_setsid.c
pipe/: bidirectional_pipe  bidirectional_pipe.c  fifo_seqnum.h  fifo_seqnum_client  fifo_seqnum_client.c  fifo_seqnum_server  fifo_seqnum_server.c  my_popen  my_popen.c  (+10 more)
(+206 files in other folders)
